feat(diet): add create diet logic and get diets by date range
